// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MinCap  should render MinCap component 1`] = `
<div
  className="sw-InputField2 "
>
  <div
    className="sw-FormControlTitle"
  >
    <label
      className="sw-FormControlTitle_Label"
    >
      Contributor min cap
    </label>
    <div
      className="sw-FormControlTitle_Info"
      tabIndex="-1"
    >
      <span
        className="sw-FormControlTitle_Tooltip"
      >
        Minimum amount of tokens to buy. Not the minimal amount for every transaction: if minCap is 1
               and a user already has 1 token from a previous transaction, they can buy any amount they want.
      </span>
    </div>
  </div>
  <input
    className="sw-TextField"
    disabled={false}
    id="mincap"
    name="mincap"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Enter here"
    value=""
  />
</div>
`;

exports[`MinCap  should render MinCap component if field is disabled 1`] = `
<div
  className="sw-InputField2 "
>
  <div
    className="sw-FormControlTitle"
  >
    <label
      className="sw-FormControlTitle_Label"
    >
      Contributor min cap
    </label>
    <div
      className="sw-FormControlTitle_Info"
      tabIndex="-1"
    >
      <span
        className="sw-FormControlTitle_Tooltip"
      >
        Minimum amount of tokens to buy. Not the minimal amount for every transaction: if minCap is 1
               and a user already has 1 token from a previous transaction, they can buy any amount they want.
      </span>
    </div>
  </div>
  <input
    className="sw-TextField"
    disabled={true}
    id="mincap"
    name="mincap"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Enter here"
    value=""
  />
</div>
`;
